--- a/index.html
+++ b/index.html
@@ -3,15 +3,33 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Malla Curricular Interactiva</title>
+  <title>Malla Ingeniería Comercial</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Malla Curricular</h1>
+  <h1>Malla Curricular Ingeniería Comercial</h1>
+
+  <!-- SEMESTRE I -->
+  <h2>Semestre I</h2>
   <div class="malla">
-    <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Matemáticas I" data-estado="pendiente" data-descripcion="Introducción al álgebra y funciones.">Matemáticas I</div>
-    <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Programación I" data-estado="aprobado" data-descripcion="Lógica básica y estructuras de control.">Programación I</div>
-    <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Estadística" data-estado="en curso" data-descripcion="Estadística descriptiva e inferencial.">Estadística</div>
+    <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Introducción a las Ciencias Sociales" data-estado="pendiente" data-descripcion="Sin requisito.">BSC-111</div>
+    <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Matemática Aplicada a la CCSSEE I" data-estado="pendiente" data-descripcion="Sin requisito.">BSC-112</div>
+    <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Epistemología de las CCSS" data-estado="pendiente" data-descripcion="Sin requisito.">BSC-113</div>
+    <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Economía y Sociedad" data-estado="pendiente" data-descripcion="Sin requisito.">BSC-114</div>
+    <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Comunicación Oral y Escrita" data-estado="pendiente" data-descripcion="Sin requisito.">BSC-115</div>
+    <div class="ramo" onclick="mostrarInfo(this)" data-nombre="TICS para las CCSSEE" data-estado="pendiente" data-descripcion="Sin requisito.">BSC-116</div>
+  </div>
+
+  <!-- SEMESTRE II -->
+  <h2>Semestre II</h2>
+  <div class="malla">
+    <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Fenómenos y Contextos Sociales" data-estado="pendiente" data-descripcion="Sin requisito.">BSC-121</div>
+    <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Historia Social y Política de Chile" data-estado="pendiente" data-descripcion="Sin requisito.">BSC-122</div>
+    <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Matemática Aplicada a la CCSSEE II" data-estado="pendiente" data-descripcion="Requiere BSC-112.">BSC-123</div>
+    <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Introducción a la Investigación en Ciencias Sociales" data-estado="pendiente" data-descripcion="Requiere BSC-113.">BSC-124</div>
+    <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Macroeconomía" data-estado="pendiente" data-descripcion="Requiere BSC-114.">BSC-125</div>
+    <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Comunicación para la Investigación" data-estado="pendiente" data-descripcion="Requiere BSC-115.">BSC-126</div>
+    <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Inglés I" data-estado="pendiente" data-descripcion="Sin requisito.">IFG-100</div>
   </div>
 
   <div id="descripcion" class="descripcion">
