--- a/index.html
+++ b/index.html
@@ -39,3 +39,92 @@
   <script src="script.js"></script>
 </body>
 </html>
+
+<!-- SEMESTRE III -->
+<h2>Semestre III</h2>
+<div class="malla">
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Territorios y actores socioeconómicos" data-descripcion="Sin requisito.">BSC-211</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Metodología Cuantitativa" data-descripcion="Requiere BSC-123 y BSC-124.">BSC-212</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Metodología Cualitativa" data-descripcion="Requiere BSC-124.">BSC-213</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Microeconomía" data-descripcion="Requiere BSC-123.">BSC-214</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Profundización I: Métodos Cuantitativos" data-descripcion="Requiere BSC-123.">BSC-215</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Inglés II" data-descripcion="Requiere IFG-100.">IFG-200</div>
+</div>
+
+<!-- SEMESTRE IV -->
+<h2>Semestre IV</h2>
+<div class="malla">
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Organizaciones" data-descripcion="Sin requisito.">BSC-221</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Estadísticas para las Ciencias Sociales" data-descripcion="Requiere BSC-212.">BSC-222</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Taller de Diseño de Proyectos de Investigación" data-descripcion="Todas las actividades curriculares aprobadas hasta el III semestre.">BSC-223</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Economía y Territorio" data-descripcion="Requiere BSC-125.">BSC-224</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Profundización II: Marketing I" data-descripcion="Sin requisito.">ICM-225</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Inglés III" data-descripcion="Requiere IFG-200.">IFG-300</div>
+</div>
+
+<!-- SEMESTRE V -->
+<h2>Semestre V</h2>
+<div class="malla">
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Administración" data-descripcion="Requiere BSC-221.">ICM-311</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Derecho y Empresa" data-descripcion="Requiere BSC-221.">ICM-312</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Inferencia Estadística para Economía y Negocios" data-descripcion="Requiere BSC-222.">ICM-313</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Contabilidad Financiera" data-descripcion="Sin requisito.">ICM-314</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Macroeconomía para la Gestión" data-descripcion="Requiere BSC-125.">ICM-315</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Marketing II" data-descripcion="Requiere ICM-225.">ICM-316</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Introducción a la Fe" data-descripcion="Sin requisito.">MFG-114</div>
+</div>
+
+<!-- SEMESTRE VI -->
+<h2>Semestre VI</h2>
+<div class="malla">
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Gestión de personas" data-descripcion="Requiere ICM-311.">ICM-321</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Cálculo Financiero y Presupuestario" data-descripcion="Requiere BSC-215.">ICM-322</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Organización Industrial" data-descripcion="Requiere BSC-214 y BSC-215.">ICM-323</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Contabilidad de Gestión" data-descripcion="Requiere ICM-314.">ICM-324</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Emprendimiento" data-descripcion="Requiere ICM-311 e ICM-316.">ICM-325</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Certificación I" data-descripcion="Sin requisito.">CFG</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Ética Cristiana" data-descripcion="Requiere MFG-114.">MFG-216</div>
+</div>
+
+<!-- SEMESTRE VII -->
+<h2>Semestre VII</h2>
+<div class="malla">
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Estrategia" data-descripcion="Requiere ICM-311 e ICM-323.">ICM-411</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Gestión del Cambio Organizacional" data-descripcion="Requiere ICM-321.">ICM-412</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Econometría" data-descripcion="Requiere BSC-215, ICM-313, ICM-323, ICM-315.">ICM-413</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Gestión Financiera" data-descripcion="Requiere ICM-322.">ICM-414</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Innovación Empresarial" data-descripcion="Requiere ICM-325.">ICM-415</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Sustentabilidad y RSE" data-descripcion="Requiere ICM-321.">ICM-416</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Certificación II" data-descripcion="Sin requisito.">CFG</div>
+</div>
+
+<!-- SEMESTRE VIII -->
+<h2>Semestre VIII</h2>
+<div class="malla">
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Práctica Inicial" data-descripcion="Requiere todas las actividades curriculares disciplinares y profesionales aprobadas hasta el VII semestre.">ICM-421</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Implementación Estratégica" data-descripcion="Requiere ICM-411, ICM-316, ICM-414.">ICM-422</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Gestión de operaciones" data-descripcion="Requiere BSC-215.">ICM-423</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Investigación de Mercados" data-descripcion="Requiere ICM-413, ICM-316.">ICM-424</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Formulación y Evaluación de Proyectos" data-descripcion="Requiere todas las actividades disciplinares y profesionales aprobadas hasta el VII semestre.">ICM-425</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Certificación III" data-descripcion="Sin requisito.">CFG</div>
+</div>
+
+<!-- SEMESTRE IX -->
+<h2>Semestre IX</h2>
+<div class="malla">
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Práctica Profesional" data-descripcion="Requiere todas las actividades disciplinares y profesionales aprobadas hasta el VIII semestre.">ICM-511</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Contabilidad Gerencial" data-descripcion="Requiere ICM-422.">ICM-512</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Estrategia Financiera" data-descripcion="Requiere ICM-422.">ICM-513</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Seminario de Investigación" data-descripcion="Requiere todas las actividades disciplinares y profesionales aprobadas hasta el VIII semestre e Inglés III.">ICM-514</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Diseño de Negocios" data-descripcion="Requiere todas las actividades disciplinares y profesionales aprobadas hasta el VIII semestre.">ICM-515</div>
+</div>
+
+<!-- SEMESTRE X -->
+<h2>Semestre X</h2>
+<div class="malla">
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Taller Profesional" data-descripcion="Requiere todas las actividades disciplinares y profesionales aprobadas hasta el IX semestre.">ICM-521</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Tesis" data-descripcion="Requiere ICM-514.">ICM-522</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Electivo I" data-descripcion="Requiere todas las actividades aprobadas hasta el VIII semestre.">ICM-523</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Electivo II" data-descripcion="Requiere todas las actividades aprobadas hasta el VIII semestre.">ICM-524</div>
+  <div class="ramo" onclick="mostrarInfo(this)" data-nombre="Electivo III" data-descripcion="Requiere todas las actividades aprobadas hasta el VIII semestre.">ICM-525</div>
+</div>
