--- a/index.html
+++ b/index.html
@@ -11,7 +11,45 @@
 
   <div class="malla">
 
-    <!-- Semestres I al V omitidos por brevedad -->
+<div class="semestre">
+  <h2>Semestre I</h2>
+  <div class="ramo rosado-1" data-id="BSC-111" data-nombre="Introducción a las Ciencias Sociales" data-descripcion="Sin requisito.">Introducción a las Ciencias Sociales</div>
+  <div class="ramo rosado-1" data-id="BSC-112" data-nombre="Matemática Aplicada I" data-descripcion="Sin requisito.">Matemática Aplicada I</div>
+  <div class="ramo rosado-2" data-id="BSC-113" data-nombre="Epistemología de las CCSS" data-descripcion="Sin requisito.">Epistemología de las CCSS</div>
+  <div class="ramo rosado-2" data-id="BSC-114" data-nombre="Economía y Sociedad" data-descripcion="Sin requisito.">Economía y Sociedad</div>
+  <div class="ramo rosado-3" data-id="BSC-115" data-nombre="Comunicación Oral y Escrita" data-descripcion="Sin requisito.">Comunicación Oral y Escrita</div>
+  <div class="ramo rosado-3" data-id="BSC-116" data-nombre="TICS para las CCSS" data-descripcion="Sin requisito.">TICS para las CCSS</div>
+</div>
+
+<div class="semestre">
+  <h2>Semestre II</h2>
+  <div class="ramo rosado-1" data-id="BSC-121" data-nombre="Fenómenos y Contextos Sociales" data-descripcion="Sin requisito.">Fenómenos y Contextos Sociales</div>
+  <div class="ramo rosado-2" data-id="BSC-122" data-nombre="Historia Social y Política de Chile" data-descripcion="Sin requisito.">Historia Social y Política de Chile</div>
+  <div class="ramo rosado-3" data-id="BSC-123" data-nombre="Matemática Aplicada II" data-descripcion="Requiere BSC-112" data-requisitos="BSC-112">Matemática Aplicada II</div>
+  <div class="ramo rosado-3" data-id="BSC-124" data-nombre="Introducción a la Investigación en CCSS" data-descripcion="Requiere BSC-113" data-requisitos="BSC-113">Investigación en CCSS</div>
+  <div class="ramo rosado-4" data-id="BSC-125" data-nombre="Macroeconomía" data-descripcion="Requiere BSC-114" data-requisitos="BSC-114">Macroeconomía</div>
+  <div class="ramo rosado-4" data-id="BSC-126" data-nombre="Comunicación para la Investigación" data-descripcion="Requiere BSC-115" data-requisitos="BSC-115">Comunicación para la Investigación</div>
+</div>
+
+<div class="semestre">
+  <h2>Semestre III</h2>
+  <div class="ramo rosado-1" data-id="BSC-211" data-nombre="Territorios y Actores Socioeconómicos" data-descripcion="Sin requisito.">Territorios y Actores Socioeconómicos</div>
+  <div class="ramo rosado-2" data-id="BSC-212" data-nombre="Metodología Cuantitativa" data-descripcion="Requiere BSC-123 y BSC-124" data-requisitos="BSC-123,BSC-124">Metodología Cuantitativa</div>
+  <div class="ramo rosado-3" data-id="BSC-213" data-nombre="Metodología Cualitativa" data-descripcion="Requiere BSC-124" data-requisitos="BSC-124">Metodología Cualitativa</div>
+  <div class="ramo rosado-3" data-id="BSC-214" data-nombre="Microeconomía" data-descripcion="Requiere BSC-123" data-requisitos="BSC-123">Microeconomía</div>
+  <div class="ramo rosado-4" data-id="BSC-215" data-nombre="Profundización I" data-descripcion="Requiere BSC-123" data-requisitos="BSC-123">Profundización I</div>
+  <div class="ramo rosado-5" data-id="IFG-200" data-nombre="Inglés II" data-descripcion="Requiere IFG-100" data-requisitos="IFG-100">Inglés II</div>
+</div>
+
+<div class="semestre">
+  <h2>Semestre IV</h2>
+  <div class="ramo rosado-1" data-id="BSC-221" data-nombre="Organizaciones" data-descripcion="Sin requisito.">Organizaciones</div>
+  <div class="ramo rosado-2" data-id="BSC-222" data-nombre="Estadísticas para las Ciencias Sociales" data-descripcion="Requiere BSC-212" data-requisitos="BSC-212">Estadísticas para las Ciencias Sociales</div>
+  <div class="ramo rosado-3" data-id="BSC-223" data-nombre="Taller de Diseño de Proyectos" data-descripcion="Requiere todas las actividades del semestre III.">Taller de Diseño de Proyectos</div>
+  <div class="ramo rosado-3" data-id="BSC-224" data-nombre="Economía y Territorio" data-descripcion="Requiere BSC-125" data-requisitos="BSC-125">Economía y Territorio</div>
+  <div class="ramo rosado-4" data-id="ICM-225" data-nombre="Marketing I" data-descripcion="Sin requisito.">Marketing I</div>
+  <div class="ramo rosado-5" data-id="IFG-300" data-nombre="Inglés III" data-descripcion="Requiere IFG-200" data-requisitos="IFG-200">Inglés III</div>
+</div>
 
     <div class="semestre">
       <h2>Semestre VI</h2>
