--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
   <div class="ramo rosado-3" data-id="BSC-124" data-nombre="Introducción a la Investigación en CCSS" data-descripcion="Requiere BSC-113" data-requisitos="BSC-113">Investigación en CCSS</div>
   <div class="ramo rosado-4" data-id="BSC-125" data-nombre="Macroeconomía" data-descripcion="Requiere BSC-114" data-requisitos="BSC-114">Macroeconomía</div>
   <div class="ramo rosado-4" data-id="BSC-126" data-nombre="Comunicación para la Investigación" data-descripcion="Requiere BSC-115" data-requisitos="BSC-115">Comunicación para la Investigación</div>
+  <div class="ramo rosado-4" data-id="IFG-100" data-nombre="Inglés I" data-descripcion="Sin requisito.">Inglés I</div>
+
 </div>
 
 <div class="semestre">
