--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
 </div>
 
     <div class="semestre">
+      <h2>Semestre V</h2>
+      <div class="ramo rosado-1" data-id="ICM-311" data-nombre="Administración" data-descripcion="Requiere BSC-221" data-requisitos="BSC-221">Administración</div>
+      <div class="ramo rosado-2" data-id="ICM-312" data-nombre="Derecho y Empresa" data-descripcion="Requiere BSC-221" data-requisitos="BSC-221">Derecho y Empresa</div>
+      <div class="ramo rosado-3" data-id="ICM-313" data-nombre="Inferencia Estadística" data-descripcion="Requiere BSC-222" data-requisitos="BSC-222">Inferencia Estadística</div>
+      <div class="ramo rosado-3" data-id="ICM-314" data-nombre="Contabilidad Financiera" data-descripcion="Sin requisito.">Contabilidad Financiera</div>
+      <div class="ramo rosado-4" data-id="ICM-315" data-nombre="Macroeconomía para la Gestión" data-descripcion="Requiere BSC-125" data-requisitos="BSC-125">Macroeconomía para la Gestión</div>
+      <div class="ramo rosado-4" data-id="ICM-316" data-nombre="Marketing II" data-descripcion="Requiere ICM-225" data-requisitos="ICM-225">Marketing II</div>
+    </div>
+
+    <div class="semestre">
       <h2>Semestre VI</h2>
       <div class="ramo rosado-1" data-id="ICM-321" data-nombre="Gestión de personas" data-descripcion="Requiere ICM-311" data-requisitos="ICM-311">Gestión de personas</div>
       <div class="ramo rosado-2" data-id="ICM-322" data-nombre="Cálculo Financiero y Presupuestario" data-descripcion="Requiere BSC-215" data-requisitos="BSC-215">Cálculo Financiero y Presupuestario</div>
